// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jeden startující 1`] = `
<div>
  <table
    className="Startujici-table table table-striped table-bordered table-condensed"
  >
    <tbody>
      <tr>
        <td
          className="Startujici-na-trase"
        >
          1
        </td>
        <td
          className="Startujici-na-trase"
        >
          3
        </td>
        <td
          className="Startujici-dokonceno"
        >
          7
        </td>
        <td
          className="Startujici-nedokonceno"
        >
          25
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <span>
      legenda:
    </span>
    <span
      className="Startujici-dokonceno Startujici-legenda"
    >
      dokončeno
    </span>
    <span
      className="Startujici-nedokonceno Startujici-legenda"
    >
      nedokončeno
    </span>
    <span
      className="Startujici-na-trase Startujici-legenda"
    >
      na trase
    </span>
  </div>
</div>
`;

exports[`třináct startujících 1`] = `
<div>
  <table
    className="Startujici-table table table-striped table-bordered table-condensed"
  >
    <tbody>
      <tr>
        <td
          className="Startujici-na-trase"
        >
          7
        </td>
        <td
          className="Startujici-na-trase"
        >
          4
        </td>
        <td
          className="Startujici-dokonceno"
        >
          16
        </td>
        <td
          className="Startujici-nedokonceno"
        >
          25
        </td>
        <td
          className="Startujici-dokonceno"
        >
          9
        </td>
        <td
          className="Startujici-dokonceno"
        >
          15
        </td>
        <td
          className="Startujici-nedokonceno"
        >
          1
        </td>
        <td
          className="Startujici-na-trase"
        >
          8
        </td>
        <td
          className="Startujici-na-trase"
        >
          59
        </td>
        <td
          className="Startujici-na-trase"
        >
          43
        </td>
      </tr>
      <tr>
        <td
          className="Startujici-nedokonceno"
        >
          42
        </td>
        <td
          className="Startujici-dokonceno"
        >
          33
        </td>
        <td
          className="Startujici-nedokonceno"
        >
          21
        </td>
        <td
          className="Startujici-dokonceno"
        >
          24
        </td>
        <td
          className="Startujici-na-trase"
        >
          25
        </td>
        <td
          className="Startujici-na-trase"
        >
          22
        </td>
        <td
          className="Startujici-na-trase"
        >
          30
        </td>
        <td
          className="Startujici-dokonceno"
        >
          23
        </td>
        <td
          className="Startujici-na-trase"
        >
          26
        </td>
      </tr>
    </tbody>
  </table>
  <div>
    <span>
      legenda:
    </span>
    <span
      className="Startujici-dokonceno Startujici-legenda"
    >
      dokončeno
    </span>
    <span
      className="Startujici-nedokonceno Startujici-legenda"
    >
      nedokončeno
    </span>
    <span
      className="Startujici-na-trase Startujici-legenda"
    >
      na trase
    </span>
  </div>
</div>
`;

exports[`žádný startující 1`] = `
<div>
  <table
    className="Startujici-table table table-striped table-bordered table-condensed"
  >
    <tbody />
  </table>
  <div>
    <span>
      legenda:
    </span>
    <span
      className="Startujici-dokonceno Startujici-legenda"
    >
      dokončeno
    </span>
    <span
      className="Startujici-nedokonceno Startujici-legenda"
    >
      nedokončeno
    </span>
    <span
      className="Startujici-na-trase Startujici-legenda"
    >
      na trase
    </span>
  </div>
</div>
`;
